# LibrarySystem

./: CMakeLists.txt  README.md  main.cpp
data/ds/linked_list/: List.cpp  List.h  List.tpp  list.cpp  list.h
data/ds/queue/: QueueL.cpp  QueueL.h
data/ds/stack/: StackL.cpp  StackL.h
data/repository/: AuthRepository.cpp  BookRepository.cpp
data/util/: StringSearch.cpp  Utilities.cpp
domain/model/: ActionType.cpp  Book.cpp  BookAction.cpp  BorrowRequest.cpp  Role.cpp  User.cpp
domain/repository/: AuthRepository.h  BookRepository.h
domain/use_case/auth/: GetCurrentUserUseCase.cpp  SignInUseCase.cpp  SignOutUseCase.cpp  SignUpUseCase.cpp
domain/use_case/book/: AddNewBookUseCase.cpp  FindBookByAuthorUseCase.cpp  FindBookByIsbnUseCase.cpp  FindBookByTitleUseCase.cpp  GetBorrowRequestsStatsUseCase.cpp  GetCompletedRequestsUseCase.cpp  GetPendingRequestsUseCase.cpp  ListBooksUseCase.cpp  ProceedBorrowRequestUseCase.cpp  RemoveBookUseCase.cpp  RequestToBorrowBookUseCase.cpp  UndoUseCase.cpp
presentation/: System.cpp  main.cpp
presentation/auth/: SignInScreen.cpp  SignInScreen.h  SignUpScreen.cpp  SignUpScreen.h
presentation/book/: BookListScreen.cpp  BookListScreen.h  BorrowRequestsScreen.cpp  BorrowRequestsScreen.h
presentation/main/: MainScreen.cpp  MainScreen.h
